# hello_backpack_nix

hello_backpack/: README.md  cabal.project  default.nix  readme.txt
hello_backpack/hello/: hello.cabal
hello_backpack/hello/src/: Hello.hsig  TestHello.hs
hello_backpack/helloBackpack/: helloBackpack.cabal
hello_backpack/helloBackpack/internal/: HelloStrHello.hs  WorldStrHello.hs
hello_backpack/helloStr/: helloStr.cabal
hello_backpack/helloStr/src/: HelloStr.hs
hello_backpack/helloUse/: helloUse.cabal
hello_backpack/helloUse/example/: Main.hs
hello_backpack/worldStr/: worldStr.cabal
hello_backpack/worldStr/src/: WorldStr.hs
