name:          helloStr
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      the string "hello"

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: src
  exposed-modules: HelloStr
  build-depends: base
