name:          helloUse
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to use backpack
description:   provides two backends providing different implementations of str :: String

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: example
  build-depends: base,hello

executable hello-example
  default-language: Haskell2010
  main-is: example/Main.hs
  build-depends: base, hello, helloBackpack
  mixins: hello (TestHello as Hello.TestHello) requires (Hello as HelloStrHello)
  mixins: hello (TestHello as World.TestHello) requires (Hello as WorldStrHello)

 	